# server/src/routes/index.ts
@@ -2,10 +2,12 @@ import { Hono } from "hono";
 import deviceRoutes from "./device";
 import networkRoutes from "./network";
 import webhookRoutes from "./webhooks";
+import whatsappRoutes from "./whatsapp";
 
 const routes = new Hono()
   .route("/api/device", deviceRoutes)
   .route("/api/network", networkRoutes)
+  .route("/api/whatsapp", whatsappRoutes)
   .route("/webhooks", webhookRoutes);
 
 export type AppType = typeof routes;
